<resources>
    <string name="app_name">apt-line-picker-app</string>
    <string name="user">user</string>
    <string name="sign_in_button_text">Please sign in using google</string>
    <string name="default_web_key">414582689858-4nf9h85b8flr8utia3dhsstm6ke89ajo.apps.googleusercontent.com</string>
    <string name="error"> </string>
    <string name="restaurant_name">RESTAURANT NAME</string>
    <string name="restaurant_address">RESTAURANT ADDRESS</string>

    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="action_homeScreen">Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_exit">Exit</string>
    <string name="action_mySubmissions">My Submissions</string>
    <string name="action_userSettings">My Settings</string>
    <string name="action_addRestuarrant">Add Restaurant</string>
    <string name="action_searchRestaurant">Search Restaurant</string>
    <string name="action_recentRestaurants">Recent Restaurant</string>
    <string name="action_exitApplication">Exit</string>
    <string name="title_activity_recent_reports">Map</string>
</resources>
